Use declared constructor to call new instance